--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "multer": "^1.4.2"
   }
 }
